--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="{% url 'novo-contrato' %}">
+                      <a href="{% url 'contrato_create' %}">
                         <span class="sub-item">Adicionar Contrato</span>
                       </a>
                     </li>
