--- a/contract/templates/contratos/contrato_list.html
+++ b/contract/templates/contratos/contrato_list.html
@@ -8,7 +8,7 @@
         <div class="card">
           <div class="card-header d-flex justify-content-between align-items-center">
             <h4 class="card-title">Contratos</h4>
-            <a href="{% url 'novo-contrato' %}" class="btn btn-success btn-sm">
+            <a href="{% url 'contrato_create' %}" class="btn btn-success btn-sm">
               <i class="fas fa-plus"></i> Gerar Contrato
             </a>
           </div>
