--- a/contract/templates/linhas/linhaorcamentaria_list.html
+++ b/contract/templates/linhas/linhaorcamentaria_list.html
@@ -38,6 +38,7 @@
                                         <td>{{ linha.objeto }}</td>
                                         <td>{{ linha.valor_orcado }}</td>
                                         <td class="text-center">
+                                            <a href="{% url 'contrato_create' %}" class="btn btn-info btn-sm">Gerar Contrato</a>
                                             <a href="{% url 'linhaorcamentaria_detail' linha.pk %}" class="btn btn-info btn-sm">Detalhes</a>
                                             <a href="{% url 'linhaorcamentaria_update' linha.pk %}" class="btn btn-warning btn-sm">Editar</a>
                                             <a href="{% url 'linhaorcamentaria_delete' linha.pk %}" class="btn btn-danger btn-sm">Excluir</a>
