--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
                 <div class="collapse" id="dashboard">
                   <ul class="nav nav-collapse">
                     <li>
-                      <a href="../demo1/index.html">
+                      <a href="">
                         <span class="sub-item">Dashboard 1</span>
                       </a>
                     </li>                               
